--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -4,6 +4,13 @@
   <title>Legal Waiver</title>
 </head>
 <body>
+<header>
+	
+	
+	<a href="index.html">home </a>
+
+
+</header>
   <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
 </body>
 </html>
