add second table

--- a/html/tables-practice/table-practice.html
+++ b/html/tables-practice/table-practice.html
@@ -26,6 +26,24 @@
 		<td>3</td>
 	</tr>
 </table>
+<br>
+<table border="2">
+	<tr>
+		<td rowspan="2">tall cell</td>
+		<td>i'm normal size</td>
+		<td>me too</td>
+	</tr>
+	<tr>
+<!-- removed cell -->
+		<td>win</td>
+		<td>loose</td>
+	</tr>
+	<tr>
+		<td colspan="2">wide column</td>
+		<td>banana</td>
+		
+	</tr>
+</table>
 
 </body>
 </html>
