--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Wildflowers Article</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="natestyle.css" type="text/css">
 </head>
 <body>
   <section id="external-links">
