--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>cheat</title>
+  <link rel="stylesheet" type="text/css" href="gps2-1.css">
+</head>
+
+
+
   <body>
     <header>
       <h1>GitHub: Git Cheat Sheet</h1>
