original work for the branch without the idea

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Bitty</title>
 </head>
-<h1>Bitty the Kitty
+<h1>Bitty the Kitty</h1>
 <br><a href="https://drive.google.com/file/d/1YcpAi30KmcPcBfz9DiJeNsnEGZMVQNwIlA/view?usp=sharing">see him here , testing if google docs can host photos<br></a>
 <img src="https://drive.google.com/file/d/1YcpAi30KmcPcBfz9DiJeNsnEGZMVQNwIlA/view?usp=sharing" alt="picture of cat">
 
@@ -24,9 +24,7 @@
 		<li>Bittle</li>
 		<li>Fluff</li>
 		<li>Marmot</li>
-	</ul>	
+	</ol>	
 	<em></em>
-		</p>
-
 </body>
 </html>
