clean code margins

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -4,27 +4,33 @@
 	<title>Bitty</title>
 </head>
 <h1>Bitty the Kitty</h1>
-<br><a href="https://drive.google.com/file/d/1YcpAi30KmcPcBfz9DiJeNsnEGZMVQNwIlA/view?usp=sharing">see him here , testing if google docs can host photos<br></a>
-<img src="https://drive.google.com/file/d/1YcpAi30KmcPcBfz9DiJeNsnEGZMVQNwIlA/view?usp=sharing" alt="picture of cat">
 
+	<br><a href="https://dl.dropboxusercontent.com/s/x9fmi8yisuz36jo/bitty.jpg?dl=0">see him here , testing if google docs can host photos<br></a>
+	<img src="https://dl.dropboxusercontent.com/s/x9fmi8yisuz36jo/bitty.jpg?dl=0" alt="picture of cat" style="width:304px">
 
 <body>
-	<h1> <strong>Bitty is like a dog</strong>
-	</h1>
-	<p> <h3>Even though he's a one year old cat, here are some of the things he does like a dog</h3>
-	<ul>
-		<li>He plays fetch</li>
-		<li>He likes to lick my face</li>
-		<li>He spazes out and runs in circles</li>
-		<li>He greets everybody- he's <em>not</em> a skiddish kitty</li>
-	</ul>
-	<p>He has several pet names:</p>
-	<ol>
-		<li>Bit</li>
-		<li>Bittle</li>
-		<li>Fluff</li>
-		<li>Marmot</li>
-	</ol>	
-	<em></em>
+	<h2> Bitty is like a dog </h2>
+	
+	<p> 
+	<h3>Even though he's a one year old cat, here are some of the things he does like a dog </h3>
+		<ul>
+			<li>He plays fetch</li>
+			<li>He likes to lick my face</li>
+			<li>He spazes out and runs in circles</li>
+			<li>He greets everybody- he's <em>not</em> a skiddish kitty</li>
+		</ul>
+	</p>
+	
+	<p><strong>He has several pet names:</strong></p>
+		<ol>
+			<li>Bit</li>
+			<li>Bittle</li>
+			<li>Fluff</li>
+			<li>Marmot</li>
+		</ol>	
+	
 </body>
 </html>
+<!-- https://www.dropbox.com/s/x9fmi8yisuz36jo/bitty.jpg?dl=0 -->
+<!--  url("https://dl.dropboxusercontent.com/s/ycn67uwuflqezft/fit1.jpg?dl=0") -->
+<!-- https://dl.dropboxusercontent.com/s/x9fmi8yisuz36jo/bitty.jpg?dl=0 -->
