--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -13,7 +13,8 @@
 </nav>
 	<h1>Welcome to Moon Bootz! </h1>
 
-<img src="images/high_jump.jpg">
+<img src="images/high_jump.jpg" alt="high jump" />
+<br>
 
 
 
