add waiver to nav

--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -10,6 +10,7 @@
 	<a href="contact.html">contact</a>
 	<a href="product_details.html">product</a>
 	<a href="index.html">home </a>
+	<a href="legal/waiver.html">waiver </a>
 </nav>
 	<h1>Welcome to Moon Bootz! </h1>
 
