clean practice-form

--- a/html/forms/practice-form.html
+++ b/html/forms/practice-form.html
@@ -5,7 +5,9 @@
 	</title>
 </head>
 <body>
+	<h1>TRAVEL INTAKE FORM</h1>
 	<form action="success.html">
+	 <fieldset>	
 	 	<div>
 	 		<label>Name of traveler:</label>
 	 		 <input type="text" name="fullname">
@@ -31,13 +33,16 @@
 			<label>departure time</label>
 			<input type="time" name="time">
 		</div>
+	 </fieldset>
 
+	 <fieldset>	
 		<div>
 			<label>special travel requests </label>
 			<br>
 			<textarea name="comments_from_traveler">
 			</textarea>		
 		</div>
+	 </fieldset><br>
 
 		<div>
 			<button type="submit">Go now!</button>
