--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width">
 <head>
   <title>Wildflowers Article</title>
   <link rel="stylesheet" href="style.css" type="text/css">
